Updated java version, spring version and refactored code